package cn.wjb114514.FlyWeight.Code;

public abstract class WebSite {
    public abstract void use(User user);
}
